# Infinite-Canvas-V1

./: .gitignore  .npmrc  AGENTS.md  DESIGN.md  DESKTOP.md  PROJECT_CONTEXT.md  design-qa.md  mac-安装依赖.sh  main.py  package-lock.json  package.json  plan.md  playwright.config.ts  pyproject.toml  requirements.txt  run.bat
.github/workflows/: release-desktop.yml  test-desktop.yml
API/: .env
backend/: __init__.py  app.py  config.py  main.py
backend/models/: ai_providers.py  assets.py  canvas.py  canvas_workflows.py  cli_tools.py  comfyui.py  conversations.py  generate.py  history.py  media.py  prompt_library.py  (+3 more)
docs/: CANVAS_MIGRATION.md  CHAT_AGENT_ROADMAP.md  DATA_DIRECTORY_LAYOUT.md  DESKTOP_INSTALLATION.md  LEGACY_STATIC.md  LOCAL_STORAGE_ARCHITECTURE.md  MIGRATION_PLAN.md  TOOLS_MIGRATION.md  storage-refactor-progress.md
electron/: cli-installer.js  dependency-setup.js  main.js  mirrors.js  preload.js  python-installer.js  setup-preload.js  setup.html  storage-setup.js
frontend/: index.html  package.json  vite.config.ts
history/: main.py
scripts/: cleanup_data_dir.py  electron-mirror-env.js  generate-openapi-types.ts  migrate-legacy-i18n.ts  patch-electron-builder-resedit.js  validate-i18n.ts  write-desktop-build-id.js
static/: angle.html  api-settings.html  asset-manager.html  canvas-list.html  canvas.html  comfyui-settings.html  enhance.html  gpt-chat.html  index.html  klein.html  online.html  settings.html  smart-canvas.html  tools.html  update-notes.json  zimage.html
workflows/: Z-Image-Enhance.json  z-image-control.json  z-image-t2i.json
(+615 files in other folders)
